# directorium

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: docs.yml  python-package.yml  python-publish.yml  python-test.yml
src/directorium/: __init__.py  api.py  directorium.py  event.py  utils.py
tests/: api_test.py  directorium_test.py  test_utils.py  utils_test.py
tests/data/: 2022.json  2023.koeln.json  2024.json  2025.koeln.json
